--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Rounebound Magic</string>
     <string name="start_game">Start Game</string>
+    <string name="game_title">Rounebound Magic</string>
+    <string name="start_play">Start Play</string>
+    <string name="select_hero">Επίλεξε τον Ήρωά σου</string>
+    <string name="hero_warrior">Warrior</string>
+    <string name="hero_mage">Mage</string>
+    <string name="hero_priestess">Mystical Priestess</string>
+    <string name="hero_ranger">Ranger</string>
+    <string name="hero_warrior_desc">Δυνατός μαχητής με σπαθί.</string>
+    <string name="hero_mage_desc">Κυρίαρχος των ρούνων και της μαγείας.</string>
+    <string name="hero_priestess_desc">Θεραπεύτρια, σύμμαχος του φωτός.</string>
+    <string name="hero_ranger_desc">Τοξότης με υψηλή ευκινησία.</string>
+    <string name="continue_to_battle">Συνέχεια στη μάχη</string>
 </resources>
