--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="lobby_confirm_selection_with_choice">Επιβεβαίωση (%1$s)</string>
     <string name="lobby_selection_saved">%1$s – %2$s αποθηκεύτηκε!</string>
     <string name="lobby_title">Runebound Lobby</string>
-    <string name="lobby_subtitle">Διάλεξε τον ήρωα σου και ξεκίνα την περιπέτεια.</string>
+    <string name="lobby_subtitle">Διάλεξε τον ήρωά σου και ξεκίνα.</string>
     <string name="lobby_last_choice">Τελευταία επιλογή: %1$s – %2$s</string>
     <string name="lobby_last_saved_time">Αποθηκεύτηκε: %1$s</string>
     <string name="select_hero">Επίλεξε τον Ήρωά σου</string>
