Add hero codex inventory hub

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,22 @@
     <string name="codex_role">Ρόλος: %1$s</string>
     <string name="codex_category_label">Κατηγορία: %1$s</string>
     <string name="codex_open_button">Άνοιγμα Codex</string>
+    <string name="hero_codex_title">Codex &amp; Inventory</string>
+    <string name="hero_codex_subtitle">Βασικά στοιχεία για τον επιλεγμένο ήρωα.</string>
+    <string name="hero_codex_stats_title">Βασικά Στατιστικά</string>
+    <string name="hero_codex_stat_hp">HP</string>
+    <string name="hero_codex_stat_mana">Mana</string>
+    <string name="hero_codex_stat_attack">Attack</string>
+    <string name="hero_codex_stat_defense">Defense</string>
+    <string name="hero_codex_weapon_label">Αρχικό Όπλο</string>
+    <string name="hero_codex_inventory_button">Άνοιγμα Τσάντας</string>
+    <string name="hero_codex_inventory_title">Inventory</string>
+    <string name="hero_codex_inventory_hint">Επίλεξε μία κατηγορία για να δεις τα αντικείμενα.</string>
+    <string name="hero_codex_inventory_empty">Δεν υπάρχουν αντικείμενα σε αυτή την κατηγορία.</string>
+    <string name="hero_codex_close">Κλείσιμο</string>
+    <string name="hero_codex_inventory_icon_cd">Άνοιγμα τσάντας</string>
+    <string name="hero_codex_currency_summary">Τρέχων πλούτος: %1$d χρυσά νομίσματα</string>
+    <string name="hero_codex_missing_selection">Επίλεξε πρώτα έναν ήρωα για να ανοίξεις τον Codex.</string>
     <string name="match3_title">Rune Clash</string>
     <string name="match3_exit_battle">Επιστροφή στο Lobby</string>
     <string name="match3_enemy_name">Black Mage</string>
