--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,18 @@
     <string name="match3_enemy_subtitle">Σκοτεινός άρχοντας των ρούνων</string>
     <string name="match3_vs">VS</string>
     <string name="match3_hint">Πάτησε δύο ρούνους για να τους ανταλλάξεις και να φορτίσεις τη δύναμή σου.</string>
+    <string name="loading">Φόρτωση…</string>
+    <string name="battle_prep_title">Προετοιμασία Μάχης</string>
+    <string name="battle_prep_weapon_prof">Όπλα: %1$s</string>
+    <string name="battle_prep_armor_prof">Πανοπλία: %1$s</string>
+    <string name="battle_prep_gold">Χρυσός</string>
+    <string name="battle_prep_capacity">Χωρητικότητα</string>
+    <string name="battle_prep_inventory_toggle">Άνοιγμα σακιδίου</string>
+    <string name="battle_prep_rarity_label">Σπανιότητα: %1$s</string>
+    <string name="battle_prep_weapon_damage">Ζημιά: %1$d</string>
+    <string name="battle_prep_weapon_element">Στοιχείο: %1$s</string>
+    <string name="battle_prep_weapon_speed">Ταχύτητα Επίθεσης: %1$.2f</string>
+    <string name="battle_prep_item_category">Κατηγορία: %1$s</string>
+    <string name="battle_prep_start_battle">Έναρξη Μάχης</string>
+    <string name="close">Κλείσιμο</string>
 </resources>
